fix(modal): fix close button position on mobile

--- a/src/styles/partials/common.less
+++ b/src/styles/partials/common.less
@@ -443,7 +443,11 @@ form {
 		margin: 0;
 		background: url(../img/close-menu-black.png) no-repeat center;
 		background-size: 15px;
-    	margin-left: 340px;
+    	margin-left: 320px;
+
+    	@media(max-width: 350px) {
+    		margin-left: 300px;
+    	}
 	}
 }
 
